--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="menu_home">홈</string>
     <string name="menu_order">주문</string>
     <string name="appbar_title_text">%s님,\n 오늘도 커피 한잔 어떠세요?</string>
+    <string name="appbar_star_title">★%d/%d</string>
 </resources>
