--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="menu_order">주문</string>
     <string name="appbar_title_text">%s님,\n 오늘도 커피 한잔 어떠세요?</string>
     <string name="appbar_star_title">★%d/%d</string>
+    <string name="recommend_menu">%s님을 위한 추천메뉴</string>
 </resources>
